@@ -975,23 +975,6 @@ tests.append(FloatTest)
 class DoubleTest(FPTest):
     typecode = 'd'
     minitemsize = 8
-
-    def test_alloc_overflow(self):
-        a = array.array('d', [-1]*65536)
-        try:
-            a *= 65536
-        except MemoryError:
-            pass
-        else:
-            self.fail("a *= 2**16 didn't raise MemoryError")
-        b = array.array('d', [ 2.71828183, 3.14159265, -1])
-        try:
-            b * 1431655766
-        except MemoryError:
-            pass
-        else:
-            self.fail("a * 1431655766 didn't raise MemoryError")
-
 tests.append(DoubleTest)
 
 def test_main(verbose=None):
