@@ -13,6 +13,7 @@ Extension Modules
 -----------------
 
 - Fix deallocation of array objects when allocation ran out of memory.
+  Remove array test case that was incorrect on 64-bit systems.
 
 
 What's New in Python 2.5.2c1?
